Update  README.md with methodology and graph of the Tuned-Deepinsight-CNN

--- a/converters/Deepinsight/Deepinsight-Basic-CNN.ipynb
+++ b/converters/Deepinsight/Deepinsight-Basic-CNN.ipynb
@@ -30,7 +30,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "#import cv2\n",
     "import seaborn as sns\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,8 +37,6 @@
     "import tensorflow as tf\n",
     "\n",
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score, confusion_matrix\n",
-    "#from google.colab.patches import cv2_imshow\n",
-    "#from google.colab import drive\n",
     "from collections import Counter\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Activation, Flatten, BatchNormalization, Conv2D, MaxPooling2D, UpSampling2D, Input\n",
@@ -47,7 +44,11 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "\n",
+    "# Uncomment the following 2 lines if you are using Google Colab\n",
+    "#from google.colab.patches import cv2_imshow \n",
+    "#from google.colab import drive"
    ]
   },
   {
@@ -166,22 +167,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Get the current working directory\n",
-    "current_dir = Path().resolve()\n",
-    "\n",
-    "# Construct the path to the dataset\n",
-    "dataset_path = os.path.join(current_dir, '..', '..', 'datasets')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {
     "executionInfo": {
@@ -198,12 +183,12 @@
    },
    "outputs": [],
    "source": [
-    "dir = 'datasets/Syphilis_tsne_34x34.pkl'\n",
+    "dir = 'datasets/imaegs/Syphilis_tsne_34x34.pkl'\n",
     "\n",
     "X_train, X_test = import_database(dir)\n",
     "\n",
-    "y_train = pd.read_csv('datasets/tabular/y_train.csv', sep=';')\n",
-    "y_test = pd.read_csv('datasets/tabular/y_test.csv', sep=';')\n",
+    "y_train = pd.read_csv('datasets/labels/y_train.csv', sep=';')\n",
+    "y_test = pd.read_csv('datasets/labels/y_test.csv', sep=';')\n",
     "\n",
     "enc = sklearn.preprocessing.OneHotEncoder(categories='auto', sparse_output=False)\n",
     "\n",
