Update README.md and Jupyter notebooks with Google Colab instructions for mounting drive and installing requirements

--- a/converters/Deepinsight/Deepinsight-Basic-CNN.ipynb
+++ b/converters/Deepinsight/Deepinsight-Basic-CNN.ipynb
@@ -11,6 +11,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If using google colab\n",
+    "# Run the following codes\n",
+    "\n",
+    "# Mount google drive\n",
+    "#from google.colab import drive\n",
+    "#drive.mount('/content/drive')\n",
+    "#!pip install -r \"/content/drive/MyDrive/~/requirements.txt\" # Replace with the path to your requirements.txt file\n",
+    "#from google.colab.patches import cv2_imshow \n",
+    "#from google.colab import drive"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {
     "executionInfo": {
@@ -45,10 +62,7 @@
     "from sklearn import metrics\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from pathlib import Path\n",
-    "\n",
-    "# Uncomment the following 2 lines if you are using Google Colab\n",
-    "#from google.colab.patches import cv2_imshow \n",
-    "#from google.colab import drive"
+    "\n"
    ]
   },
   {
