--- a/converters/Deepinsight/Deepinsight-Tuned-CNN.ipynb
+++ b/converters/Deepinsight/Deepinsight-Tuned-CNN.ipynb
@@ -11,6 +11,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# If using google colab\n",
+        "# Run the following codes\n",
+        "\n",
+        "# Mount google drive\n",
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n",
+        "#!pip install -r \"/content/drive/MyDrive/~/requirements.txt\" # Replace with the path to your requirements.txt file\n",
+        "#from google.colab.patches import cv2_imshow \n",
+        "#from google.colab import drive"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 29,
       "metadata": {
         "colab": {
@@ -38,11 +55,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import metrics\n",
         "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score, confusion_matrix\n",
-        "from sklearn.preprocessing import OneHotEncoder\n",
-        "\n",
-        "#Uncomment the following lines if you are using Google Colab\n",
-        "#from google.colab.patches import cv2_imshow\n",
-        "#from google.colab import drive"
+        "from sklearn.preprocessing import OneHotEncoder"
       ]
     },
     {
