Revamp to organize the repo and make sure the experiments are easily reproducible

--- a/converters/Deepinsight/Deepinsight.ipynb
+++ b/converters/Deepinsight/Deepinsight.ipynb
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "cd 'Conversores/DeepInsight/pyDeepInsight/pyDeepInsight/'"
+    "cd 'pyDeepInsight/pyDeepInsight/'"
    ]
   },
   {
@@ -1262,11 +1262,13 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv376",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
