--- a/converters/Deepinsight/Deepinsight-Basic-CNN.ipynb
+++ b/converters/Deepinsight/Deepinsight-Basic-CNN.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 6193,
@@ -60,9 +60,7 @@
     "from keras import optimizers\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from pathlib import Path\n",
-    "\n"
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -886,8 +884,8 @@
    "source": [
     "# Save results\n",
     "\n",
-    "report_dir = 'Results/Deepinsight_basic_cong_syphilis_report.csv'\n",
-    "final_dir = 'Results/Deepinsight_basic_cong_syphilis_mean.csv'\n",
+    "report_dir = 'results/Deepinsight_basic_cong_syphilis_report.csv'\n",
+    "final_dir = 'results/Deepinsight_basic_cong_syphilis_mean.csv'\n",
     "\n",
     "mydados_relatorio_modelo_df.to_csv(report_dir, sep=';')\n",
     "final_report.to_csv(final_dir, sep=';')\n",
@@ -915,7 +913,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv376",
    "language": "python",
    "name": "python3"
   },
@@ -929,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
