--- a/converters/IGTD/IGTD.ipynb
+++ b/converters/IGTD/IGTD.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 1968,
@@ -30,11 +30,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from google.colab.patches import cv2_imshow\n",
-    "from google.colab import drive"
+    "\n",
+    "#import cv2\n",
+    "#from google.colab.patches import cv2_imshow\n",
+    "#from google.colab import drive"
    ]
   },
   {
@@ -139,8 +140,8 @@
    },
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv('Tabular data sets/Syphilis/X_train.csv', sep=';')\n",
-    "X_test = pd.read_csv('Tabular data sets/Syphilis/X_test.csv', sep=';')"
+    "X_train = pd.read_csv(r'datasets\\tabular\\X_train.csv', sep=';')\n",
+    "X_test = pd.read_csv(r'datasets\\tabular\\X_test.csv', sep=';')"
    ]
   },
   {
@@ -206,7 +207,7 @@
    "source": [
     "# Run IGTD on Train set\n",
     "\n",
-    "result_dir = \"/IGTD/Datasets/Syphilis/Train\"\n",
+    "result_dir = \"datasets/images/Train\"\n",
     "run_igtd(dataset = X_train, rows = 8, cols = 8, result_dir = result_dir)"
    ]
   },
@@ -220,7 +221,7 @@
    "source": [
     "# Run IGTD on Test set\n",
     "\n",
-    "result_dir = \"/IGTD/Datasets/Syphilis/Test\"\n",
+    "result_dir = \"datasets/images/Test\"\n",
     "run_igtd(dataset = X_test, rows = 8, cols = 8, result_dir = result_dir)"
    ]
   },
@@ -251,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "dir = 'Tabular data sets/Syphilis/y_train.csv'\n",
+    "dir = 'datasets/tabular/y_train.csv'\n",
     "y_train = pd.read_csv(dir, sep=';')"
    ]
   },
@@ -289,10 +290,7 @@
     }
    ],
    "source": [
-    "import pickle\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "dir = '/IGTD/Datasets/Syphilis/Train/Results.pkl'\n",
+    "dir = 'datasets/Train/Results.pkl'\n",
     "\n",
     "data = []\n",
     "\n",
@@ -342,11 +340,13 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv376",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
