Reorganized project structure and starndardized file names for the results

--- a/converters/REFINED/REFINED-Basic-CNN.ipynb
+++ b/converters/REFINED/REFINED-Basic-CNN.ipynb
@@ -12,6 +12,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If using google colab\n",
+    "# Run the following codes\n",
+    "\n",
+    "# Mount google drive\n",
+    "#from google.colab import drive\n",
+    "#drive.mount('/content/drive')\n",
+    "#!pip install -r \"/content/drive/MyDrive/~/requirements.txt\" # Replace with the path to your requirements.txt file\n",
+    "#from google.colab.patches import cv2_imshow \n",
+    "#from google.colab import drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone REFINED  repo\n",
+    "#!git clone https://github.com/omidbazgirTTU/REFINED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "uW25tV0hrvVt"
    },
@@ -20,7 +47,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import cv2\n",
+    "import seaborn as sns\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn.metrics\n",
@@ -34,7 +61,9 @@
     "from keras.layers import Dense, Dropout, Activation, Flatten, BatchNormalization, Conv2D, MaxPooling2D, UpSampling2D, Input\n",
     "from keras import optimizers\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -50,7 +79,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "Xa6VwynkEHCN"
+    "id": "DPm3YMBLkFF6"
    },
    "outputs": [],
    "source": [
@@ -64,17 +93,8 @@
     "\n",
     "  y_onehot = np.array(y_onehot)\n",
     "\n",
-    "  return y_onehot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "DPm3YMBLkFF6"
-   },
-   "outputs": [],
-   "source": [
+    "  return y_onehot\n",
+    "  \n",
     "def myconfusion_matrix(y_true, y_pred):\n",
     "  tp, tn, fp, fn = 0, 0, 0, 0\n",
     "\n",
@@ -169,14 +189,14 @@
     }
    ],
    "source": [
-    "with open('/REFINED/data/Cong_Syphilis/X_train.pickle', 'rb') as file:\n",
+    "with open('/datasets/images/X_train.pickle', 'rb') as file:\n",
     "  X_train = pickle.load(file)\n",
     "\n",
-    "with open('/REFINED/data/Cong_Syphilis/X_test.pickle', 'rb') as file:\n",
+    "with open('/datasets/images/X_test.pickle', 'rb') as file:\n",
     "  X_test = pickle.load(file)\n",
     "\n",
-    "y_train = pd.read_csv('Tabular data sets/Syphilis/y_train.csv', sep=';')\n",
-    "y_test = pd.read_csv('Tabular data sets/Syphilis/y_test.csv', sep=';')\n",
+    "y_train = pd.read_csv('/datasets/images/tabular/y_train.csv', sep=';')\n",
+    "y_test = pd.read_csv('/datasets/images/tabular/y_test.csv', sep=';')\n",
     "\n",
     "enc = sklearn.preprocessing.OneHotEncoder(categories='auto', sparse=False)\n",
     "\n",
@@ -647,7 +667,7 @@
     "    return tp / (tp + fn)\n",
     "\n",
     "# Loading the model\n",
-    "dir = '/REFINED_basic_cong_syphilis.pkl'\n",
+    "dir = 'models/REFINED_basic_cong_syphilis.pkl'\n",
     "\n",
     "with open(dir, 'rb') as file:\n",
     "  basic_model = pickle.load(file)\n",
