--- a/converters/IGTD/IGTD-Basic-CNN.ipynb
+++ b/converters/IGTD/IGTD-Basic-CNN.ipynb
@@ -40,7 +40,18 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'venv376 (Python 3.7.6)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'f:/Users/Leo/Documents/Projects/CSCNN/Congenital-Syphilis-CNN-Classification/venv376/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -827,7 +838,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv376",
    "language": "python",
    "name": "python3"
   },
@@ -841,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
