--- a/converters/IGTD/IGTD-Basic-CNN.ipynb
+++ b/converters/IGTD/IGTD-Basic-CNN.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,20 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'venv376 (Python 3.7.6)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'f:/Users/Leo/Documents/Projects/CSCNN/Congenital-Syphilis-CNN-Classification/venv376/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -63,7 +52,7 @@
     "import tensorflow as tf\n",
     "\n",
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score, confusion_matrix\n",
-    "from collections import Counter\n",
+    "#from collections import Counter\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Activation, Flatten, BatchNormalization, Conv2D, MaxPooling2D, UpSampling2D, Input\n",
     "from keras import optimizers\n",
@@ -84,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "id": "DPm3YMBLkFF6"
    },
@@ -167,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -189,7 +178,7 @@
    "source": [
     "# Load training data\n",
     "\n",
-    "dir = 'datasets/images/Train_current/Results.pkl'\n",
+    "dir = 'datasets/images/Train/Results.pkl'\n",
     "\n",
     "data = []\n",
     "\n",
@@ -202,7 +191,7 @@
     "\n",
     "# Load testing data\n",
     "\n",
-    "dir = 'datasets/images/Test_current/Results.pkl'\n",
+    "dir = 'datasets/images/Test/Results.pkl'\n",
     "\n",
     "data = []\n",
     "\n",
@@ -225,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,80 +232,6 @@
     "print(X_train.shape)\n",
     "print(y_train.shape)\n",
     "print(X_test.shape)\n",
-    "print(y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 427,
-     "status": "ok",
-     "timestamp": 1687541870704,
-     "user": {
-      "displayName": "Leonides Neto",
-      "userId": "11156147817316568610"
-     },
-     "user_tz": 180
-    },
-    "id": "qBE5wAgAJRV0",
-    "outputId": "12935588-400f-4fb0-85b6-ba3a6beb9a50"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({np.int64(1): 661, np.int64(0): 660})\n",
-      "Counter({np.int64(0): 166, np.int64(1): 165})\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Counter(np.argmax(y_train, axis=1)))\n",
-    "print(Counter(np.argmax(y_test, axis=1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 4,
-     "status": "ok",
-     "timestamp": 1687541870705,
-     "user": {
-      "displayName": "Leonides Neto",
-      "userId": "11156147817316568610"
-     },
-     "user_tz": 180
-    },
-    "id": "uz9YUVMlJRV1",
-    "outputId": "5598195e-f576-4951-d8f6-e4820f5320ba"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1321, 8, 8, 1)\n",
-      "(331, 8, 8, 1)\n",
-      "(1321, 2)\n",
-      "(331, 2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X_train.shape)\n",
-    "print(X_test.shape)\n",
-    "print(y_train.shape)\n",
     "print(y_test.shape)"
    ]
   },
@@ -804,8 +719,8 @@
    "source": [
     "# Save results\n",
     "\n",
-    "report_dir = 'results/IGTD_basic_cong_syphilis_report.csv'\n",
-    "final_dir = 'results/IGTD_basic_cong_syphilis_mean.csv'\n",
+    "report_dir = 'results/Basic-IGTD-CNN_30x_results.csv'\n",
+    "final_dir = 'results/Basic-IGTD-CNN_mean_results.csv'\n",
     "\n",
     "mydados_relatorio_modelo_df.to_csv(report_dir, sep=';')\n",
     "final_report.to_csv(final_dir, sep=';')\n",
@@ -838,7 +753,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv376",
+   "display_name": "venv310",
    "language": "python",
    "name": "python3"
   },
@@ -852,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
