--- a/converters/IGTD/IGTD.ipynb
+++ b/converters/IGTD/IGTD.ipynb
@@ -12,6 +12,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!git clone 'https://github.com/zhuyitan/IGTD'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "executionInfo": {
      "elapsed": 1968,
@@ -31,7 +40,7 @@
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import Scripts.IGTD_Functions as igtd\n",
     "\n",
     "#import cv2\n",
     "#from google.colab.patches import cv2_imshow\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 5,
@@ -55,8 +64,23 @@
     "id": "JObwYNlV_Opf"
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'IGTD'...\n"
+     ]
+    }
+   ],
    "source": [
-    "#!git clone 'https://github.com/zhuyitan/IGTD'"
+    "!git clone \"https://github.com/zhuyitan/IGTD\""
    ]
   },
   {
@@ -70,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "bnhvuT8V5Ivf"
    },
@@ -85,8 +109,6 @@
     "#!git clone 'https://github.com/zhuyitan/IGTD'\n",
     "\n",
     "#!cd IGTD/\n",
-    "\n",
-    "import Scripts.IGTD_Functions as igtd\n",
     "\n",
     "def run_igtd(dataset, rows, cols, result_dir):\n",
     "\n",
@@ -113,13 +135,7 @@
     "\n",
     "    igtd.table_to_image(norm_data, [num_row, num_col], fea_dist_method, image_dist_method, save_image_size,\n",
     "                  max_step, val_step, result_dir, error, switch_t, min_gain)\n",
-    "\n",
-    "    # Deleting the txts\n",
-    "\n",
-    "    # Se for salvar na pasta compartilhada: dataset_dengue_chika/data/\n",
-    "    #dataset_dir = \"dataset_dengue_chika/data\"\n",
-    "    #dir_name = \"/content/gdrive/MyDrive/Mestrado/Results/dataset_dengue_chika/data/\"\n",
-    "\n",
+    "    \n",
     "    return None"
    ]
   },
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "f7qKAjnpz_Ap"
    },
@@ -146,69 +162,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "As-A7rBFpUOe"
-   },
-   "outputs": [],
-   "source": [
-    "X_train[0] = 0\n",
-    "X_train[1] = 0\n",
-    "X_train[2] = 0\n",
-    "\n",
-    "X_test[0] = 0\n",
-    "X_test[1] = 0\n",
-    "X_test[2] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 2,
-     "status": "ok",
-     "timestamp": 1667313907909,
-     "user": {
-      "displayName": "Leonides Neto",
-      "userId": "11156147817316568610"
-     },
-     "user_tz": 180
-    },
-    "id": "-N1nBv3JpnBu",
-    "outputId": "c361f5c9-48fa-41b1-847d-16a1087e8482"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1321, 64)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "SG7pRemP0XXQ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (60,) (63,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Run IGTD on Train set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m result_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatasets/images/Train\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mrun_igtd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrows\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcols\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult_dir\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mresult_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[17], line 36\u001b[0m, in \u001b[0;36mrun_igtd\u001b[1;34m(dataset, rows, cols, result_dir)\u001b[0m\n\u001b[0;32m     32\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(name\u001b[38;5;241m=\u001b[39mresult_dir, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Transform\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m \u001b[43migtd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtable_to_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnorm_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mnum_row\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_col\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfea_dist_method\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimage_dist_method\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msave_image_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     37\u001b[0m \u001b[43m              \u001b[49m\u001b[43mmax_step\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_step\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mswitch_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_gain\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32mf:\\Users\\Leo\\Documents\\Projects\\CSCNN\\Congenital-Syphilis-CNN-Classification\\converters\\IGTD\\Scripts\\IGTD_Functions.py:604\u001b[0m, in \u001b[0;36mtable_to_image\u001b[1;34m(norm_d, scale, fea_dist_method, image_dist_method, save_image_size, max_step, val_step, normDir, error, switch_t, min_gain)\u001b[0m\n\u001b[0;32m    601\u001b[0m plt\u001b[38;5;241m.\u001b[39msavefig(fname\u001b[38;5;241m=\u001b[39mnormDir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/image_ranking.png\u001b[39m\u001b[38;5;124m'\u001b[39m, bbox_inches\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtight\u001b[39m\u001b[38;5;124m'\u001b[39m, pad_inches\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    602\u001b[0m plt\u001b[38;5;241m.\u001b[39mclose(fig)\n\u001b[1;32m--> 604\u001b[0m index, err, time \u001b[38;5;241m=\u001b[39m \u001b[43mIGTD\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mranking_feature\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mranking_image\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    605\u001b[0m \u001b[43m    \u001b[49m\u001b[43merr_measure\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merror\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_step\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_step\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mswitch_t\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mswitch_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_step\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_step\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_gain\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmin_gain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    606\u001b[0m \u001b[43m    \u001b[49m\u001b[43msave_folder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnormDir\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43merror\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    608\u001b[0m fig \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mfigure()\n\u001b[0;32m    609\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(time, err)\n",
+      "File \u001b[1;32mf:\\Users\\Leo\\Documents\\Projects\\CSCNN\\Congenital-Syphilis-CNN-Classification\\converters\\IGTD\\Scripts\\IGTD_Functions.py:471\u001b[0m, in \u001b[0;36mIGTD\u001b[1;34m(source, target, err_measure, max_step, switch_t, val_step, min_gain, random_state, save_folder, file_name)\u001b[0m\n\u001b[0;32m    467\u001b[0m     index_record, err_record, run_time \u001b[38;5;241m=\u001b[39m IGTD_absolute_error(source\u001b[38;5;241m=\u001b[39msource,\n\u001b[0;32m    468\u001b[0m         target\u001b[38;5;241m=\u001b[39mtarget, max_step\u001b[38;5;241m=\u001b[39mmax_step, switch_t\u001b[38;5;241m=\u001b[39mswitch_t, val_step\u001b[38;5;241m=\u001b[39mval_step, min_gain\u001b[38;5;241m=\u001b[39mmin_gain,\n\u001b[0;32m    469\u001b[0m         random_state\u001b[38;5;241m=\u001b[39mrandom_state, save_folder\u001b[38;5;241m=\u001b[39msave_folder, file_name\u001b[38;5;241m=\u001b[39mfile_name)\n\u001b[0;32m    470\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m err_measure \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msquared\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 471\u001b[0m     index_record, err_record, run_time \u001b[38;5;241m=\u001b[39m \u001b[43mIGTD_square_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msource\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    472\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtarget\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_step\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_step\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mswitch_t\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mswitch_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_step\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_step\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_gain\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmin_gain\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    473\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrandom_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msave_folder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msave_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    475\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m index_record, err_record, run_time\n",
+      "File \u001b[1;32mf:\\Users\\Leo\\Documents\\Projects\\CSCNN\\Congenital-Syphilis-CNN-Classification\\converters\\IGTD\\Scripts\\IGTD_Functions.py:338\u001b[0m, in \u001b[0;36mIGTD_square_error\u001b[1;34m(source, target, max_step, switch_t, val_step, min_gain, random_state, save_folder, file_name)\u001b[0m\n\u001b[0;32m    335\u001b[0m err_v\u001b[38;5;241m.\u001b[39mfill(np\u001b[38;5;241m.\u001b[39mnan)\n\u001b[0;32m    336\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num):\n\u001b[0;32m    337\u001b[0m     err_v[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(np\u001b[38;5;241m.\u001b[39msquare(source[i, \u001b[38;5;241m0\u001b[39m:i] \u001b[38;5;241m-\u001b[39m target[i, \u001b[38;5;241m0\u001b[39m:i])) \u001b[38;5;241m+\u001b[39m \\\n\u001b[1;32m--> 338\u001b[0m                np\u001b[38;5;241m.\u001b[39msum(np\u001b[38;5;241m.\u001b[39msquare(\u001b[43msource\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m))\n\u001b[0;32m    340\u001b[0m step_record \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39mones(num)\n\u001b[0;32m    341\u001b[0m err_record \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39msum(np\u001b[38;5;241m.\u001b[39msquare(source[tril_id] \u001b[38;5;241m-\u001b[39m target[tril_id]))]\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (60,) (63,) "
+     ]
+    }
+   ],
    "source": [
     "# Run IGTD on Train set\n",
     "\n",
     "result_dir = \"datasets/images/Train\"\n",
     "run_igtd(dataset = X_train, rows = 8, cols = 8, result_dir = result_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1321, 61)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.to_numpy().shape"
    ]
   },
   {
@@ -340,13 +339,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv376",
+   "display_name": "venv310",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.7.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
