--- a/converters/Deepinsight/Deepinsight.ipynb
+++ b/converters/Deepinsight/Deepinsight.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "tPBNRNQyeF0M"
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "CKOMAsSqeH6d"
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "-N32nCqzqHE5"
    },
@@ -144,12 +144,12 @@
     "id": "jalnaNw69zoy"
    },
    "source": [
-    "# **Congenital Syphilis**"
+    "# **Import Congenital Syphilis Dataset**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "id": "jmPn4B8IT5Cw"
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -230,7 +230,7 @@
        "y   (1321, 1)    (331, 1)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "id": "wVd3tYTRz4oP"
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "id": "oCon-vAFz73W"
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "id": "rHH1NSnV_w9X"
    },
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "f:\\Users\\Leo\\Documents\\Projects\\CSCNN\\Congenital-Syphilis-CNN-Classification\\venv310\\lib\\site-packages\\pyDeepInsight\\image_transformer.py:93: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "f:\\Users\\Leo\\Documents\\Projects\\FAI\\Congenital-Syphilis-CNN-Classification\\venv310\\lib\\site-packages\\pyDeepInsight\\image_transformer.py:93: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  plt.scatter(x_new[:, 0], x_new[:, 1], s=1,\n"
      ]
     },
@@ -328,7 +328,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "f:\\Users\\Leo\\Documents\\Projects\\CSCNN\\Congenital-Syphilis-CNN-Classification\\venv310\\lib\\site-packages\\pyDeepInsight\\image_transformer.py:93: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "f:\\Users\\Leo\\Documents\\Projects\\FAI\\Congenital-Syphilis-CNN-Classification\\venv310\\lib\\site-packages\\pyDeepInsight\\image_transformer.py:93: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  plt.scatter(x_new[:, 0], x_new[:, 1], s=1,\n"
      ]
     },
@@ -346,7 +346,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "f:\\Users\\Leo\\Documents\\Projects\\CSCNN\\Congenital-Syphilis-CNN-Classification\\venv310\\lib\\site-packages\\pyDeepInsight\\image_transformer.py:93: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "f:\\Users\\Leo\\Documents\\Projects\\FAI\\Congenital-Syphilis-CNN-Classification\\venv310\\lib\\site-packages\\pyDeepInsight\\image_transformer.py:93: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  plt.scatter(x_new[:, 0], x_new[:, 1], s=1,\n"
      ]
     },
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -624,75 +624,7 @@
     "id": "6g3syxUxTzfm",
     "outputId": "7b02a649-10b4-4666-ced3-5a135b88884e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mininum feature and pixel overlap in a matrix up to 75x75\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Min OF%</th>\n",
-       "      <th>Min OP%</th>\n",
-       "      <th>Matrix Size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>T-SNE</th>\n",
-       "      <td>3.28</td>\n",
-       "      <td>0.0188</td>\n",
-       "      <td>73x73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PCA</th>\n",
-       "      <td>3.28</td>\n",
-       "      <td>0.0178</td>\n",
-       "      <td>66x66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KPCA</th>\n",
-       "      <td>6.56</td>\n",
-       "      <td>0.0356</td>\n",
-       "      <td>75x75</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Min OF% Min OP% Matrix Size\n",
-       "T-SNE    3.28  0.0188       73x73\n",
-       "PCA      3.28  0.0178       66x66\n",
-       "KPCA     6.56  0.0356       75x75"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "min_df = pd.DataFrame(\n",
     "    {'Min OF%':[f'{t_sne_min_f:.2f}', f'{pca_min_f:.2f}', f'{kpca_min_f:.2f}'],\n",
@@ -707,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -992,7 +924,7 @@
     "# Saving datasets\n",
     "# Saving the dataset as a pickle file, can't save image datasets as dataframes it must be a 2d input\n",
     "\n",
-    "path = 'datasets/images/syphilis_tsne_34x34_12-24-2024.pkl'\n",
+    "path = 'datasets/images/Syphilis_tsne_34x34.pkl'\n",
     "\n",
     "with open(path, 'wb') as file:\n",
     "  pickle.dump(X_train_img, file)\n",
