Updated requirements and fixes file path for saving REFINED results

--- a/converters/REFINED/REFINED-Basic-CNN.ipynb
+++ b/converters/REFINED/REFINED-Basic-CNN.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Clone REFINED  repo\n",
-    "#!git clone https://github.com/omidbazgirTTU/REFINED"
+    "#!git clone git+https://github.com/omidbazgirTTU/REFINED.git@bbf20bc#egg=refined"
    ]
   },
   {
@@ -966,8 +966,8 @@
    "source": [
     "# Save results\n",
     "\n",
-    "report_dir = '/REFINED_basic_cong_syphilis.csv'\n",
-    "final_dir = '/REFINED_basic_cong_syphilis_mean.csv'\n",
+    "report_dir = 'results/REFINED_basic_cong_syphilis.csv'\n",
+    "final_dir = 'results/REFINED_basic_cong_syphilis_mean.csv'\n",
     "\n",
     "mydados_relatorio_modelo_df.to_csv(report_dir, sep=';')\n",
     "final_report.to_csv(final_dir, sep=';')"
@@ -983,7 +983,7 @@
    "source": [
     "# Save model\n",
     "\n",
-    "dir = '/REFINED_basic_cong_syphilis.pkl'\n",
+    "dir = 'models/REFINED_basic_cong_syphilis.pkl'\n",
     "\n",
     "with open(dir, 'wb') as file:\n",
     "  pickle.dump(basic_model, file)"
